--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,30 @@
 services:
-  nginx:
-    image: nginx:1.27-alpine
-    depends_on:
-      - application
+  ingress:
+    image: traefik:v3.3
+    command:
+      #- --api.dashboard=true
+      #- --api.insecure=true
+      - --log.level=DEBUG
+      - --providers.docker=true
+      - --providers.docker.exposedbydefault=false
+      - --providers.docker.watch=true
+      - --entrypoints.web.address=:80
     ports:
-      - "8080:80"
+      - '8080:80'
+      - '8081:8080'
     volumes:
-      - ./nginx/config/default.conf:/etc/nginx/conf.d/default.conf:ro
-    healthcheck:
-      test: [ "CMD-SHELL", "wget -O /dev/null http://localhost || exit 1" ]
-      timeout: 5s
+      - /var/run/docker.sock:/var/run/docker.sock
 
   application:
     build: ./application/.
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.localhost.rule=Host(`localhost`)
+      - traefik.http.services.localhost.loadbalancer.server.port=8080
     expose:
       - "8080"
     healthcheck:
-      test: [ "CMD-SHELL", "wget -O /dev/null http://localhost:8080 || exit 1" ]
-      timeout: 5s
+      test: [ "CMD-SHELL", "curl -so /dev/null http://127.0.0.1:8080 || exit 1" ]
+      interval: 5s
+      timeout: 10s
+      retries: 3
